@@ -2,16 +2,24 @@ package com.github.Snuslyk.slib;
 
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
+import javafx.scene.Cursor;
 import javafx.scene.control.ComboBox;
+import javafx.scene.control.RadioButton;
+import javafx.scene.control.ToggleGroup;
+import javafx.scene.layout.VBox;
 
 import java.net.URL;
 import java.util.List;
+import java.util.Objects;
 import java.util.ResourceBundle;
 
 public class Controller implements Initializable {
 
     @FXML
     private ComboBox<Section> sections;
+
+    @FXML
+    private VBox objectContainer;
 
     private static Section pickedSection;
 
@@ -22,10 +30,20 @@ public class Controller implements Initializable {
 
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
-        sections.setValue(SECTIONS.get(0));
+        ToggleGroup group = new ToggleGroup();
+
+        RadioButton clonedObject = newObject(group);
+        RadioButton clonedObject1 = newObject(group);
+        RadioButton clonedObject2 = newObject(group);
+        clonedObject.setSelected(true);
+        clonedObject.setText("Мероприятия");
+        clonedObject1.setText("Виды мероприятий");
+        clonedObject2.setText("Виды заявок");
+
+        sections.setValue(SECTIONS.getFirst());
         sections.getItems().addAll(SECTIONS);
 
-        pickedSection = SECTIONS.get(0);
+        pickedSection = SECTIONS.getFirst();
 
         updateSection();
 
@@ -38,6 +56,18 @@ public class Controller implements Initializable {
 
     private void updateSection(){
 
+    }
+
+    private RadioButton newObject(ToggleGroup group) {
+        RadioButton clone = new RadioButton();
+
+        clone.setCursor(Cursor.HAND);
+        clone.getStyleClass().add("object-button");
+        clone.setToggleGroup(group);
+        clone.setPrefSize(320, 40);
+        objectContainer.getChildren().add(clone);
+
+        return clone;
     }
 
     public static Section getPickedSection() {
